# AtmosBlock-WebPortal

./: .dockerignore  README.md  SECURITY.md  docker-compose.yml  docker_build.sh  docker_cleanup.sh  enable_buildkit.sh  frontend_build.sh  generate_env.py  generate_env.sh  index.html  launch_app.sh  sonar-project.properties
.github/workflows/: build.yaml  sonarqube.yml
assets/: ProfilePage-CM3P-6Gl.js  ProfilePage-xllb80-a.js  ResultsPage-Bvi3u3lL.js  ResultsPage-eaH8MX-3.js  SettingsPage-BkUqF62B.js  SettingsPage-CpsTG5fV.js  aboutPage-BIVMVfPc.js  aboutPage-BJ6eEmER.js  aboutPage-V7BINxn2.css  authPage-BcdpG7IS.js  authPage-OnCJ1Pub.js  homePage-96YdOgP7.js  homePage-CkeQaQfw.js  i18n-BPcgiOnt.js  i18n-BqTtoiWo.js  icons-CWPu_Ox_.js  icons-Cb89orYe.js  index-B-JNh-Hw.js  index-C7zud3iY.js  index-jLPKAyZi.css  notFoundPage-C4kTaPDj.js  notFoundPage-CVn2oWyT.js  requestsPage-BpsJHxiW.css  requestsPage-Cxb0ncUa.js  requestsPage-a8VUKHmR.js  ui-CKu8JIXp.js  ui-DsGTuYJt.js  useAuth-BxhRuCYj.js  useAuth-ClZB3FXr.js  vendor-C0qp8t1d.js  vendor-DMwOp_gx.js
backend/FAST-IBAN_Project/: config_executor.py
backend/FAST-IBAN_Project/execution/code_t/: CMakeLists.txt  FAST_IBAN_main.c
backend/FAST-IBAN_Project/execution/code_t/lib/: lib.c  lib.h
backend/db/: init-db.sql
build-wrapper-linux-x86/: build-wrapper-linux-x86-64
bw-output/: build-wrapper-dump.json  compile_commands.json
cron_cleanup/: Dockerfile  requirements.txt
frontend/: .eslintrc.js  .prettierignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  (+4 more)
(+222 files in other folders)
